Add support for ISL7998X 4x camera MIPI decoder on fsimx6
Add support for 4x camera chip ISL79985/ISL79987 to those boards of the
fsimx6 architecture that support MIPI cameras: efusA9, armStoneA9r2 and
QBlissA9r2.

- Add support to device trees efusa9q.dts, efusa9dl.dts and efusa9qdl.dtsi.
- Add support to device trees armstonea9r2q.dts, armstonea9r2dl.dts and
  armstonea9r2qdl.dtsi.
- Add support to device trees qblissa9r2q.dts, qblissa9r2dl.dts and
  qblissa9r2qdl.dtsi.

While we are at it, drop serial camera stuff from armStoneA9 and NetDCUA9
device trees. These boards do not have support for MIPI cameras.

- Remove serial camera from armstonea9dl.dts, armstonea9q.dts and
  armstonea9qdl.dtsi.
- Remove serial camera from netdcua9dl.dts, netdcsua9q.dts and
  netdcua9qdl.dtsi.

--- a/arch/arm/boot/dts/efusa9dl.dts
+++ b/arch/arm/boot/dts/efusa9dl.dts
@@ -177,6 +177,10 @@ wvga {					\
 /* Camera on serial MIPI CSI interface */
 #define CONFIG_EFUSA9_SERIAL_CAMERA
 
+/* In case of MIPI, select one of the following cameras */
+//#define CONFIG_EFUSA9_MIPI_CAMERA_OV564X
+#define CONFIG_EFUSA9_MIPI_CAMERA_ISL7998X
+
 /*
  * SD_A - External SD port with Card Detect (CD) and Write Protect (WP)
  * On efus SKIT: external port is Micro SD card slot with CD but without WP
