--- a/arch/arm/boot/dts/armstonea9r2q.dts
+++ b/arch/arm/boot/dts/armstonea9r2q.dts
@@ -156,6 +156,10 @@ wvga {					\
 /* Camera on serial MIPI CSI interface */
 //#define CONFIG_ARMSTONEA9R2_SERIAL_CAMERA
 
+/* In case of MIPI, select one of the following cameras */
+//#define CONFIG_ARMSTONEA9R2_MIPI_CAMERA_OV564X
+#define CONFIG_ARMSTONEA9R2_MIPI_CAMERA_ISL7998X
+
 /* SD-CARD - SD_A is WLAN */
 #define CONFIG_ARMSTONEA9R2_WLAN
 /* SD-CARD - SD_B is micro SD */
