--- a/drivers/dma/Kconfig
+++ b/drivers/dma/Kconfig
@@ -363,6 +363,15 @@ config MXS_DMA
 	  and APBX-DMA is integrated into Freescale
 	  i.MX23/28/MX6Q/MX6DL/MX6UL chips.
 
+config MXS_DMA_EXT
+	bool "Extended MXS DMA support"
+	depends on SOC_IMX23 || SOC_IMX28 || SOC_IMX6
+	select STMP_DEVICE
+	select DMA_ENGINE
+	help
+	  Use the extended version of the MXS DMA engine to have better
+	  GPMI NAND support on i.MX6.
+
 source "drivers/dma/pxp/Kconfig"
 
 config MX3_IPU
