fix device-tree support of imx6ul
While merging branches they have changed the label of the flexcan from
flexcan1/2 to can1/2. To use this labels we have to rename our device
trees from flexcan1/2 to can1/2.
In imx6ull the labels are flexcan1/2 so we need a distinction in
efusa7ul device tree.

--- a/arch/arm/boot/dts/efusa7ul.dts
+++ b/arch/arm/boot/dts/efusa7ul.dts
@@ -429,14 +429,22 @@ wvga {					\
 };
 #endif /* CONFIG_EFUSA7UL_ETH1 */
 
+#ifdef CONFIG_EFUSA7UL_ULL
 &flexcan1 {
+#else
+&can1 {
+#endif
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_flexcan1>;
 	xceiver-supply = <&reg_can>;
 	status = "okay";
 };
 
+#ifdef CONFIG_EFUSA7UL_ULL
 &flexcan2 {
+#else
+&can2 {
+#endif
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_flexcan2>;
 	xceiver-supply = <&reg_can>;
