--- a/arch/arm/boot/dts/picocom1.2.dts
+++ b/arch/arm/boot/dts/picocom1.2.dts
@@ -355,7 +355,7 @@ chosen {
 #endif
 
 #ifdef CONFIG_PICOCOM1_2_CAN_A
-&flexcan1 {
+&can1 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_flexcan1>;
 	xceiver-supply = <&reg_can>;
@@ -364,7 +364,7 @@ chosen {
 #endif
 
 #ifdef CONFIG_PICOCOM1_2_CAN_B
-&flexcan2 {
+&can2 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_flexcan2>;
 	xceiver-supply = <&reg_can>;
