fix device tree hdmi support
While updating to kernel version 4.9.11 there is a label called hdmi.
But we also have a label called hdmi in the edid node. So we have to
change this label from hdmi to hdmi_edid that we dont have a double
declaration.

--- a/arch/arm/boot/dts/armstonea9r2qdl.dtsi
+++ b/arch/arm/boot/dts/armstonea9r2qdl.dtsi
@@ -582,7 +582,7 @@
 	};
 
 #ifdef CONFIG_ARMSTONEA9R2_HDMI
-	hdmi: edid@50 {
+	hdmi_edid: edid@50 {
 		compatible = "fsl,imx6-hdmi-i2c";
 		reg = <0x50>;
 	};
