fix fec network settings
While merging some of our improvements are lost. We added this
improvements again, now the network is working correctly.

--- a/arch/arm/boot/dts/efusa9x.dts
+++ b/arch/arm/boot/dts/efusa9x.dts
@@ -1456,7 +1456,7 @@ lvds_wvga {				\
 
 				/* FEC1 */
 				MX6SX_PAD_ENET2_RX_CLK__ENET2_REF_CLK_25M 0x0a0b9
-				MX6SX_PAD_ENET1_TX_CLK__ENET1_REF_CLK1	0x0a0b1
+//				MX6SX_PAD_ENET1_TX_CLK__ENET1_REF_CLK1	0x0a0b1
 				MX6SX_PAD_RGMII1_TXC__ENET1_RGMII_TXC	0x0a0b9
 				MX6SX_PAD_RGMII1_TD0__ENET1_TX_DATA_0	0x0a0b1
 				MX6SX_PAD_RGMII1_TD1__ENET1_TX_DATA_1	0x0a0b1
