fix usb settings
We have added the flag over-current-active-low. NXP has added now a new
flag which is the opposite of our flag. So we have changed the code to
stay nearly the same as the official NXP kernel. That is why we remove
the flag over-current-active-low. Because if do not set a flag it is
automatically over-current-active-low without setting this bit.

--- a/arch/arm/boot/dts/efusa7ul.dts
+++ b/arch/arm/boot/dts/efusa7ul.dts
@@ -546,9 +546,7 @@ wvga {					\
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_usbotg1>;
 //###	vbus-supply = <&reg_usb_otg1_vbus>;
-#ifdef CONFIG_EFUSA7UL_HAVE_USB_OTG1_OC
-	over-current-active-low;
-#else
+#ifndef CONFIG_EFUSA7UL_HAVE_USB_OTG1_OC
 	disable-over-current;
 #endif
 	status = "okay";
