fix fsimx6/ul defconfig
We need some modification in the defconfig to support all features.

--- a/arch/arm/configs/fsimx6_defconfig
+++ b/arch/arm/configs/fsimx6_defconfig
@@ -19,8 +19,10 @@ CONFIG_MODULE_UNLOAD=y
 CONFIG_ARCH_MXC=y
 CONFIG_SOC_IMX6Q=y
 CONFIG_SOC_IMX6SL=y
+CONFIG_SOC_IMX6SLL=y
 CONFIG_SOC_IMX6SX=y
 CONFIG_SOC_IMX6UL=y
+CONFIG_SOC_IMX6ULL=y
 CONFIG_SOC_IMX7D=y
 # CONFIG_SWP_EMULATE is not set
 CONFIG_SMP=y
