--- a/arch/arm/configs/fsimx6ul_defconfig
+++ b/arch/arm/configs/fsimx6ul_defconfig
@@ -184,7 +184,6 @@ CONFIG_VIDEO_MXC_CAPTURE=y
 CONFIG_VIDEO_MXC_PXP_V4L2=y
 CONFIG_VIDEO_MXC_CSI_CAMERA=y
 CONFIG_SOC_CAMERA=y
-CONFIG_VIDEO_MX3=y
 CONFIG_DRM=y
 CONFIG_FB=y
 # CONFIG_FB_MX3 is not set
@@ -213,6 +212,8 @@ CONFIG_SND=y
 CONFIG_SND_SOC=y
 CONFIG_SND_SOC_FSL_ASRC=y
 CONFIG_SND_SOC_FSL_SSI=y
+CONFIG_SND_SOC_FSL_SAI=y
+CONFIG_SND_SOC_FSL_ESAI=y
 CONFIG_SND_IMX_SOC=y
 CONFIG_SND_SOC_IMX_SGTL5000=y
 CONFIG_SND_SOC_IMX_MQS=y
