Improve semtech touch device-tree settings
With our default LCD display the touchcoordinates are inverse. X+ = X-,
Y+ = Y-. To work by default correctly set the flags x-rev and y-rev in
the device-tree files.

--- a/arch/arm/boot/dts/efusa7ul.dts
+++ b/arch/arm/boot/dts/efusa7ul.dts
@@ -694,6 +694,8 @@ wvga {					\
 		/*pinctrl-0 = <&pinctrl_touchscreen>;*/
 		interrupt-parent = <&gpio5>;
 		interrupts = <0 IRQ_TYPE_EDGE_FALLING>;
+		x-rev;
+		y-rev;
 	};
 #endif
 
