--- a/arch/arm/boot/dts/Makefile
+++ b/arch/arm/boot/dts/Makefile
@@ -525,6 +525,7 @@ dtb-$(CONFIG_SOC_IMX6UL) += \
 	imx6ul-14x14-evk-pf1550.dtb \
 	efusa7ul.dtb \
 	picocom1.2.dtb \
+	picocoma7.dtb \
 	cubea7ul.dtb \
 	gar1.dtb \
 	imx6ul-9x9-evk.dtb \
