fsimx6: Fix audio clock rates, set lrclk-strength for SGTL5000
Update audio settings in device trees of fsimx6 boards. There are four
issues:

Issue 1:

When SSI is used and the audio codec is the SGTL5000, the drive strength
of the incoming lrclk might be a problem which results in swapped stereo
channels now and then. Increase the drive strength for this signal by
setting device tree property lrclk-strength on all fsimx6 boards equipped
with SGTL5000. (armStoneA9, armStoneA9r2, efusA9, PicoMODA9)

Issue 2:

Codecs like SGTL5000 need an input clock (MCLK) to be able to work. This
clock is output on pad CKO on most fsimx6 boards. In the past, some boards
derived this clock from PLL4_AUDIO_DIV -> SSI1_SEL -> SSI1 -> CKO2_SEL ->
CKO2 -> CKO. However this clock chain blocks CKO2, which is a problem if
the board also needs CKO2 for other purposes, like a camera clock. Change
the clock chain to PLL4_AUDIO_DIV -> CKO1_SEL -> CKO1 -> CKO, so that only
CKO1 is used. (efusA9, armStoneA9r2)

Issue 3:

If MCLK is a multiple of the common audio bit rates, then the Codec can
directly use an integer divider to generate the frame and bit clocks.
If not, then it must use its internal PLL, which is using slightly more
power. Good clock rates are 12.288 MHz and 24.576 MHz because they work
well with audio sample rates like 8000 Hz, 32000 Hz or 48000 Hz. Then the
Codec-PLL is only needed for 44100 Hz based audio sources (Compact Disc).

However in the past some boards used a 24 MHz clock derived from the SoC
input oscillator, where *all* sample rates needed the PLL. Change those
clock rates to 25.576 MHz. (efusA9, armStoneA9r2, PicoMODA9)

Issue 4:

Because i.MX6 Dual/Quad has a limitation on the AUDIO clock divider, the
above new clock chain restricts the MCLK rate to a minimum of 20 MHz
(650 MHz/4/1/8). Therefore use 24.576 MHz (768.432 MHz/4/1/8). On
Solo/DualLite, where this restriction does not exist, we could also go
down to 12.288 MHz (768.432 MHz/4/2/8), which would be slightl

--- a/arch/arm/boot/dts/armstonea9r2qdl.dtsi
+++ b/arch/arm/boot/dts/armstonea9r2qdl.dtsi
@@ -434,20 +434,33 @@
 	disable-scaling;
 };
 
+/* CKO (via CKO1): 24.576 MHz for Audio Codec, CKO2: 24 MHz for Camera. */
 &clks {
 	assigned-clocks = <&clks IMX6QDL_CLK_PLL4_AUDIO_DIV>,
-			  <&clks IMX6QDL_CLK_SSI1_SEL>,
-			  <&clks IMX6QDL_CLK_SSI1>,
-			  <&clks IMX6QDL_CLK_CKO2_SEL>,
-			  <&clks IMX6QDL_CLK_CKO>;
+			  <&clks IMX6QDL_CLK_CKO1_SEL>,
+			  <&clks IMX6QDL_CLK_CKO1_PODF>,
+			  <&clks IMX6QDL_CLK_CKO>,
+			  <&clks IMX6QDL_CLK_CKO2_SEL>;
 
 	assigned-clock-parents = <0>,
 				 <&clks IMX6QDL_CLK_PLL4_AUDIO_DIV>,
 				 <0>,
-				 <&clks IMX6QDL_CLK_SSI1>,
-				 <&clks IMX6QDL_CLK_CKO2>;
-//###	assigned-clock-rates = <786432000>, <0>, <24576000>;
-	assigned-clock-rates = <786432000>, <0>, <12288000>;
+				 <&clks IMX6QDL_CLK_CKO1>,
+ 				 <&clks IMX6QDL_CLK_OSC>;
+
+	/*
+	 * The Audio-PLL (PLL4) must have at least 650MHz. The PLL post divider
+	 * can divide by 1, 2 and 4, which means the lowest possible frequency
+	 * is 162.5 MHz. The largest PODF divider for CKO1 is 8, so we do not
+	 * get below 20 MHz. Use 24.576 MHz as this is a multiple of the most
+	 * commonly used bit rates.
+	 *
+	 * Remark: Solo and DualLite have an additional divider that also can
+	 * divide by 1, 2 and 4. So here we could go down to 12.288 MHz, but
+	 * better keep the code common for all boards.
+	 */
+	//assigned-clock-rates = <98304000>, <98304000>, <12288000>, <24000000>;
+	assigned-clock-rates = <196608000>, <196608000>, <24576000>, <24000000>;
 };
 
 #ifdef CONFIG_ARMSTONEA9R2_SPI_FLASH
@@ -599,14 +612,15 @@
 
 #ifdef CONFIG_ARMSTONEA9R2_SGTL5000_AUDIO
 	sgtl5000: sgtl5000@0a {
-			compatible = "fsl,sgtl5000";
-			reg = <0x0a>;
-			mono2both;
-			clocks = <&clks IMX6QDL_CLK_CKO>;
-			VDDA-supply = <&reg_sgtl5000_vdda>;
-			VDDIO-supply = <&reg_sgtl5000_vddio>;
-			VDDD-supply = <&reg_sgtl5000_vddd>;
-		};
+		compatible = "fsl,sgtl5000";
+		reg = <0x0a>;
+		mono2both;
+		lrclk-strength = <3>;
+		clocks = <&clks IMX6QDL_CLK_CKO>;
+		VDDA-supply = <&reg_sgtl5000_vdda>;
+		VDDIO-supply = <&reg_sgtl5000_vddio>;
+		VDDD-supply = <&reg_sgtl5000_vddd>;
+	};
 #endif
 
 
@@ -630,16 +644,16 @@
 		 * cameras maybe need a gpio to perform a reset. */
 		/* rst-gpios = <dummy>; */
 		csi_id = <0>;
-		mclk = <24000000>;
+		mclk = <24000000>;		/* OSC out */
 		mclk_source = <0>;
 	};
 #ifdef CONFIG_ARMSTONEA9R2_MIPI_CAMERA_ISL7998X
 	isl7998x_mipi: isl7998x_mipi@44 {
 		compatible = "intersil,isl7998x_mipi";
 		reg = <0x44>;
-		clocks = <&clks IMX6QDL_CLK_CKO2>;
+		clocks = <&clks IMX6QDL_CLK_CKO2>;	/* Dummy */
 		clock-names = "csi_mclk";
-		mclk = <27000000>;
+		mclk = <27000000>;		/* Has own oscillator */
 	};
 #endif
 #endif /* CONFIG_ARMSTONEA9R2_SERIAL_CAMERA */
