fsimx6: HDMI: Use DVI mode, do not overwrite pixel format
Add device tree property "force-dvi-mode" for mxc_hdmi.c. Set this property
for all fsimx6 boards as there is no official support for real HDMI mode.

The MXC display driver on i.MX6 (mxc_ipuv3_fb.c) requires to set a pixel
format in the device tree. Do not overwrite this pixel format in mxc_hdmi.c.
Even if RGB24 is the most common HDMI format, we may want to specify other
formats in the device tree as well.

--- a/arch/arm/boot/dts/qblissa9r2dl.dts
+++ b/arch/arm/boot/dts/qblissa9r2dl.dts
@@ -35,9 +35,16 @@
 /* i.MX6 Solo and DualLite only have one IPU, do not change */
 #define CONFIG_QBLISSA9R2_USE_ONE_IPU
 
-/* Configure HDMI settings here (ignored if HDMI is not used) */
+/*
+ * Configure HDMI settings here (ignored if HDMI is not used).
+ *
+ * Remark:
+ * To make HDMI work on the F&S SKIT baseboard, pixel format BGR24 is needed.
+ * On a standard Qseven baseboard, RGB24 is correct. Please change if required.
+ */
 #define CONFIG_QBLISSA9R2_HDMI_BPP	32
-#define CONFIG_QBLISSA9R2_HDMI_PIX_FMT	"RGB24"
+#define CONFIG_QBLISSA9R2_HDMI_PIX_FMT	"BGR24"
+//#define CONFIG_QBLISSA9R2_HDMI_PIX_FMT	"RGB24"
 #define CONFIG_QBLISSA9R2_HDMI_MODE_STR	"1920x1080M@60"
 
 /*
