--- a/drivers/gpio/Kconfig
+++ b/drivers/gpio/Kconfig
@@ -438,7 +438,7 @@ config GPIO_TZ1090_PDC
 
 config GPIO_VF610
 	def_bool y
-	depends on ARCH_MXC && SOC_VF610
+	depends on ARCH_MXC && (SOC_VF610 || SOC_IMX7ULP)
 	select GPIOLIB_IRQCHIP
 	help
 	  Say yes here to support Vybrid vf610 GPIOs.
