--- a/arch/arm/boot/dts/imx6sx.dtsi
+++ b/arch/arm/boot/dts/imx6sx.dtsi
@@ -1462,6 +1462,8 @@
 				clocks = <&clks IMX6SX_CLK_ECSPI5>,
 					 <&clks IMX6SX_CLK_ECSPI5>;
 				clock-names = "ipg", "per";
+				dmas = <&sdma 11 7 1>, <&sdma 12 7 2>;
+				dma-names = "rx", "tx";
 				status = "disabled";
 			};
 
