--- a/arch/arm/boot/dts/imx6sx.dtsi
+++ b/arch/arm/boot/dts/imx6sx.dtsi
@@ -814,6 +814,7 @@
 				compatible = "usb-nop-xceiv";
 				clocks = <&clks IMX6SX_CLK_USBPHY1>;
 				clock-names = "main_clk";
+				status = "disabled";
 			};
 
 			caam_snvs: caam-snvs@020cc000 {
