--- a/arch/arm/boot/dts/Makefile
+++ b/arch/arm/boot/dts/Makefile
@@ -478,11 +478,12 @@ dtb-$(CONFIG_SOC_IMX6SX) += \
 	imx6sx-sdb-reva.dtb \
 	imx6sx-sdb-sai.dtb \
 	imx6sx-sdb-reva-ldo.dtb \
-	imx6sx-sdb.dtb	\
+	imx6sx-sdb.dtb \
 	imx6sx-sdb-btwifi.dtb \
 	imx6sx-sdb-emmc.dtb \
 	imx6sx-sdb-lcdif1.dtb \
 	efusa9x.dtb \
+	picocorea9x.dtb \
 	bema9x.dtb \
 	picocoma9x.dtb \
 	imx6sx-sdb-ldo.dtb	\
