--- a/drivers/video/fbdev/mxc/Kconfig
+++ b/drivers/video/fbdev/mxc/Kconfig
@@ -109,6 +109,13 @@ config FB_MXC_ADV7535
 	help
 	  Driver support for the ADV7535 DSI-to-HDMI module
 
+config FB_MXC_TC358762
+	tristate "TC358762 support"
+	depends on I2C
+	depends on FB_MXC_MIPI_DSI || FB_MXC_MIPI_DSI_NORTHWEST
+	help
+	  Driver support for the TC358762 DSI-to-RGB module
+
 config HANNSTAR_CABC
 	tristate "Hannstar CABC function"
 	help
