--- a/arch/arm/configs/fsimx7ulp_defconfig
+++ b/arch/arm/configs/fsimx7ulp_defconfig
@@ -380,6 +380,12 @@ CONFIG_BACKLIGHT_GPIO=y
 CONFIG_FRAMEBUFFER_CONSOLE=y
 CONFIG_FRAMEBUFFER_CONSOLE_DETECT_PRIMARY=y
 CONFIG_LOGO=y
+# CONFIG_LOGO_LINUX_MONO is not set
+# CONFIG_LOGO_LINUX_VGA16 is not set
+# CONFIG_LOGO_LINUX_CLUT224 is not set
+CONFIG_LOGO_FS_MONO=y
+CONFIG_LOGO_FS_VGA16=y
+CONFIG_LOGO_FS_CLUT224=y
 CONFIG_SOUND=y
 CONFIG_SND=y
 CONFIG_SND_SOC=y
